2015-05-04
- added ЎўІі (Belorussian)
- added Ӂӂ (Moldovian)
- added әҒғҚқҢңӨөҰұҺһ (Kazakh)
- added ЀѐЍѝЌќЃѓЏџЅѕЉљЊњ (Macedonian)
- added ЇїҐґЄє (Ukrainian)

2015-05-01
- cleaned up russian glyphs, added hints
- added Ḡḡ (100% Georgian romanization)
- added ʺʹ (100% Kazakh romanization)
- added Ŭŭ (100% Belarus romanization)
- added new editable sample page