@@ -57,7 +57,7 @@
             <option value="Special - ()+-×÷*=≠[]{}!?&amp;&quot;'#$/:;\&lt;&gt;@~|%‰°±≤≥∞= 2m² 3m³ ··⋅ –— ¹⁰⁴⁵⁶⁷⁸⁹⁺⁻⁼⁽⁾ ≠≈≡½¼¾№¶">Special glyphs</option>
             <option value="CAD symbols - ℄↔↗↧∠⌀⌒⌓⌖⌭⌯⌰⌳⌲⌴⌵⍵⏊⏤⏥ⒺⒻⓁⓂⓅⓈⓉⓊ□○◎⫽">CAD symbols</option>
             <option value="Kerning is [Ȩȩ], ligatures are [Ȼȼ] (on=working, no=not working).">Kerning and ligatures test</option>
-            <optgroup label="Fully supported languages (38)">
+            <optgroup label="Fully supported languages (40)">
                 <option value="Afrikaans - Sê ek moet sy zebra en xilofoon in bring, want môre gaan dit reën (ÁáÉéÈèÊêËëÍíÎîÏÓóÔôÚúÛûÝý)">Afrikaans</option>
                 <option value="Albanian - Veçori tipologjike të shqipes së sotme standarde (ÇçËë)">Albanian</option>
                 <option value="Azerbaijani - AaBbCcÇçDdEeƏəFfGgĞğHhXxIıİiJjKkQqLlMmNnOoÖöPpRrSsŞşTtUuÜüVvYyYAyaYEyeEeYOyoYUyuZz (ƏəƢƣЬьƵƶӘI̡ı̡ƟɵЗзЈАјаN̡n̡)">Azerbaijani</option>
@@ -87,11 +87,14 @@
                 <option value="Maltese - Jekk jogħġbok ibgħat lili xi pangram (ĊċĠġĦħŻż)">Maltese</option>
                 <option value="Moldovan - Muzicologă în bej, vând whisky și tequila, preț fix (AaĂăÂâBbCcDdEeFfGgHhIiÎîJjKkLlMmNnOoPpQqRrSsȘșTtȚțUuVvWwXxYyZz)">Moldovan (latin)</option>
                 <option value="Moldovan - no pangram (АаБбВвГгДдЕеЖжӁӂЗзИиЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЫыЬьЭэЮюЯя)">Moldovan (cyrillic)</option>
+                <option value="Montenegrin (latin) - Možte li mi preporučiti neki dobar hotel? (ABCDEFGHIJKLMNOPRSTUVZabcdefghijklmnoprstuvzĆćČčĐđŚśŠšŹźŽž)">Montenegrin (latin)</option>
+                <option value="Montenegrin (cyrillic) - no pangram (ЂЈЉЊЋЏАБВГДЕЖЗИКЛМНОПРСТУФХЦЧШабвгдежзиклмнопрстуфхцчшђјљњћџ)">Montenegrin (cyrillic)</option>
                 <option value="Norwegian - En god stil må først og fremst være klar. Den må være passende. (ÆæØøÅå)">Norwegian</option>
                 <option value="Polish - Pójdźże, kiń tę chmurność w głąb flaszy! (ĄąĆćĘęŁłŃńÓóŚśŹźŻż)">Polish</option>
                 <option value="Portuguese- Luís argüia à Júlia que «brações, zângão» eram do português (ÁáÂâÃãÀàÉéÊêÍíÓóÔôÕõÚúÜü«»)">Portuguese</option>
                 <option value="Romanian - Muzicologă în bej, vând whisky și tequila, preț fix (ĂăÂâÎîŞşȘșŢţȚț)">Romanian</option>
                 <option value="Russian - no pangram (БВГДЕЖИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЭЮЯбвгдежийклмнопрстуфхцчшщъыэюяё)">Russian</option>
+                <option value="Serbian - Ја могу да једем стакло (АаБбВвГгДдЂђЕеЖжЗзИиЈјКкЛлЉљМмНнЊњОоПпРрСсТтЋћУуФфХхЦцЧчЏџШш)">Serbian</option>
                 <option value="Slovak - Kŕdeľ ďatľov učí koňa žrať kôru (ÁáÄäČčĎďÉéÍíĽľĹĺŇňÓóÔôŔŕŠšŤťÚúÝýŽž)">Slovak</option>
                 <option value="Slovene - Šerif bo za vajo spet kuhal domače žgance (ČčŠšŽž,ĆćĐđÖöÒòÓóÜü)">Slovene</option>
                 <option value="Spanish - Whisky bueno: ¡excitad mi frágil pequeña vejez! (ÁáÉéÍíÓóÚúÑñÜü¡¿)">Spanish</option>
@@ -100,7 +103,7 @@
                 <option value="Ukrainian - Я можу їсти скло, і воно мені не зашкодить (АаБбВвГгҐґДдЕеЄєЖжЗзИиІіЇїЙйКкЛлМмНнОоПпРрСсТтУуФфХхЦцЧчШшЩщЬьЮюЯя)">Ukrainian</option>
                 <option value="Vietnamese - ẠạẢảẤấẦầẨẩẪẫẬậẮắẰằẲẳẴẵẶặẸẹẺẻẼẽẾếỀềỂểỄễỆệỈỉĨĩỊịỌọỎỏỐốỒồỔổỖỗỘộỚớỜờỞởỠỡỢợŨũƠơƯưỤụỦủỨứỪừỬửỮữỰựỲỳỴỵỶỷỸỹ">Vietnamese</option>
             </optgroup>
-            <optgroup label="Languages with romanization support (6)">
+            <optgroup label="Languages with romanization support (5)">
                 <option value="Chinese (hanyu pinyin) - Tiāndì xuánhuáng, yǔzhòu hónghuāng (āáǎàĀÁǍÀēéěèĒÉĚÈīíǐìĪÍǏÌōóǒòŌÓǑÒūúǔùŪÚǓÙüǖǘǚǜÜǕǗǙǛ)">Chinese (hanyu pinyin)</option>
                 <option value="Armenian (romanization) - ÇÊËÒÔçêëòôĊċČčĒēĚěĠġŁłŠšŽžƏǰəʿ̣̄̇̌̔ṖṗṘṙṚṛṪṫ’‛(rʿr̄ṙřr̔ṛr)">Armenian (romanization)</option>
                 <option value="Georgian (romanization) - no pangram (ŽžḠḡĞğŠšŞşČčÇç)">Georgian (romanization)</option>
@@ -109,13 +112,12 @@
             </optgroup>
             <optgroup label="Languages with partial support">
                 <option value="Greek basic - (αβγδεζηθικλμνξοπρςστυφχψωϑΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩ)">Greek (basic)</option>
-                <option value="Greek complete - (ͰͱͲͳʹ͵Ͷͷͺͻͼͽ΄΅Ά·ΈΉΊΌΎΏΐΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩΪΫάέήίΰαβγδεζηθικλμνξοπρςστυφχψωϊϋόύώϏϐϑϒϓϔϕϖϗϘϙϚϛϜϝϞϟϠϡϢϣϤϥϦϧϨϩϪϫϬϭϮϯϰϱϲϳϴϵ϶ϷϸϹϺϻϼϽϾϿABCDEFἀἁἂἃἄἅἆἇἈἉἊἋἌἍἎἏἐἑἒἓἔἕἘἙἚἛἜἝἠἡἢἣἤἥἦἧἨἩἪἫἬἭἮἯἰἱἲἳἴἵἶἷἸἹἺἻἼἽἾἿὀὁὂὃὄὅὈὉὊὋὌὍὐὑὒὓὔὕὖὗὙὛὝὟὠὡὢὣὤὥὦὧὨὩὪὫὬὭὮὯὰάὲέὴήὶίὸόὺύὼώᾀᾁᾂᾃᾄᾅᾆᾇᾈᾉᾊᾋᾌᾍᾎᾏᾐᾑᾒᾓᾔᾕᾖᾗᾘᾙᾚᾛᾜᾝᾞᾟᾠᾡᾢᾣᾤᾥᾦᾧᾨᾩᾪᾫᾬᾭᾮᾯᾰᾱᾲᾳᾴᾶᾷᾸᾹᾺΆᾼ᾽ι᾿῀῁ῂῃῄῆῇῈΈῊΉῌ῍῎῏ῐῑῒΐῖῗῘῙῚΊ῝῞῟ῠῡῢΰῤῥῦῧῨῩῪΎῬ῭΅`ῲῳῴῶῷῸΌῺΏῼ´῾)">Greek (complete)</option>
+                <option value="Greek all - (ͰͱͲͳʹ͵Ͷͷͺͻͼͽ΄΅Ά·ΈΉΊΌΎΏΐΑΒΓΔΕΖΗΘΙΚΛΜΝΞΟΠΡΣΤΥΦΧΨΩΪΫάέήίΰαβγδεζηθικλμνξοπρςστυφχψωϊϋόύώϏϐϑϒϓϔϕϖϗϘϙϚϛϜϝϞϟϠϡϢϣϤϥϦϧϨϩϪϫϬϭϮϯϰϱϲϳϴϵ϶ϷϸϹϺϻϼϽϾϿABCDEFἀἁἂἃἄἅἆἇἈἉἊἋἌἍἎἏἐἑἒἓἔἕἘἙἚἛἜἝἠἡἢἣἤἥἦἧἨἩἪἫἬἭἮἯἰἱἲἳἴἵἶἷἸἹἺἻἼἽἾἿὀὁὂὃὄὅὈὉὊὋὌὍὐὑὒὓὔὕὖὗὙὛὝὟὠὡὢὣὤὥὦὧὨὩὪὫὬὭὮὯὰάὲέὴήὶίὸόὺύὼώᾀᾁᾂᾃᾄᾅᾆᾇᾈᾉᾊᾋᾌᾍᾎᾏᾐᾑᾒᾓᾔᾕᾖᾗᾘᾙᾚᾛᾜᾝᾞᾟᾠᾡᾢᾣᾤᾥᾦᾧᾨᾩᾪᾫᾬᾭᾮᾯᾰᾱᾲᾳᾴᾶᾷᾸᾹᾺΆᾼ᾽ι᾿῀῁ῂῃῄῆῇῈΈῊΉῌ῍῎῏ῐῑῒΐῖῗῘῙῚΊ῝῞῟ῠῡῢΰῤῥῦῧῨῩῪΎῬ῭΅`ῲῳῴῶῷῸΌῺΏῼ´῾)">Greek (all)</option>
                 <option value="Greek missing - (ͰͱͲͳʹ͵Ͷͷͺͻͼͽ·ϏϐϒϓϔϕϖϗϘϙϚϛϜϝϞϟϠϡϢϣϤϥϦϧϨϩϪϫϬϭϮϯϰϱϲϳϴϵ϶ϷϸϹϺϻϼϽϾϿἀἁἂἃἄἅἆἇἈἉἊἋἌἍἎἏἐἑἒἓἔἕἘἙἚἛἜἝἠἡἢἣἤἥἦἧἨἩἪἫἬἭἮἯἰἱἲἳἴἵἶἷἸἹἺἻἼἽἾἿὀὁὂὃὄὅὈὉὊὋὌὍὐὑὒὓὔὕὖὗὙὛὝὟὠὡὢὣὤὥὦὧὨὩὪὫὬὭὮὯὰάὲέὴήὶίὸόὺύὼώᾀᾁᾂᾃᾄᾅᾆᾇᾈᾉᾊᾋᾌᾍᾎᾏᾐᾑᾒᾓᾔᾕᾖᾗᾘᾙᾚᾛᾜᾝᾞᾟᾠᾡᾢᾣᾤᾥᾦᾧᾨᾩᾪᾫᾬᾭᾮᾯᾰᾱᾲᾳᾴᾶᾷᾸᾹᾺΆᾼ᾽ι᾿῀῁ῂῃῄῆῇῈΈῊΉῌ῍῎῏ῐῑῒΐῖῗῘῙῚΊ῝῞῟ῠῡῢΰῤῥῦῧῨῩῪΎῬ῭΅`ῲῳῴῶῷῸΌῺΏῼ´῾)">Greek (missing)</option>
                 <option value="Japanese - (いえしすてどなにのまるをアイエサシジスズタテヌプペムルー世业严事产以任伯何作使保信全公内准処分利制加効包博及发号司合告品図图型場处复外实密对工布序式态息態成所承括改放效文料施无日更書有期权材标校格档検業極権止無版物特状理産用由申留番的目码社禁秘类系総編统编罗置者行表製複規言記認語請语请財質责辑適部門関门附限集面頒页)">Japanese/Chinese</option>
+            </optgroup>
+            <optgroup label="Languages with no support">
                 <option value="Georgian - მინას ვჭამ და არა მტკივა (აბგდევზჱთიკლმნჲოპჟრსტჳუფქღყშჩცძწჭხჴჯჰჵჶჷჸ)">Georgian</option>
-                <option value="Montenegrin - Možte li mi preporučiti neki dobar hotel? (ABCDEFGHIJKLMNOPRSTUVZabcdefghijklmnoprstuvzĆćČčĐđŚśŠšŹźŽž)">Montenegrin (latin)</option>
-                <option value="Montenegrin - no pangram (ЂЈЉЊЋЏАБВГДЕЖЗИКЛМНОПРСТУФХЦЧШабвгдежзиклмнопрстуфхцчшђјљњћџ)">Montenegrin (cyrillic)</option>
-                <option value="Serbian - Ја могу да једем стакло (АаБбВвГгДдЂђЕеЖжЗзИиЈјКкЛлЉљМмНнЊњОоПпРрСсТтЋћУуФфХхЦцЧчЏџШш)">Serbian</option>
                 <option value="Esperanto - Eĥoŝanĝo ĉiuĵaŭde (ĈĉĜĝĤĥĴĵŜŝŬŭ)">Esperanto</option>
             </optgroup>
         </select>
