@@ -1,3 +1,7 @@
+2015-05-06
+- added ЂЋћђ (Montenegrin, Serbian)
+- increased right bearing of к
+
 2015-05-04
 - added ЎўІі (Belorussian)
 - added Ӂӂ (Moldovian)
